[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "discord-py>=2.5.2",
    "docx>=0.2.4",
    "flask>=3.1.1",
    "google-generativeai>=0.8.5",
    "groq>=0.28.0",
    "openai>=1.88.0",
    "pandas>=2.3.0",
    "pdfplumber>=0.11.7",
    "requests>=2.32.4",
]
